Updated installation scripts