@@ -1,21 +1,17 @@
 #!/bin/sh
 
-INSTAL_CONFIG_FILE="./config/install_config.conf"
-HAS_S2AGRI_SERVICES=false
+SCRIPTPATH="$( cd "$(dirname "$0")" ; pwd -P )"
 
-: ${GPT_CONFIG_FILE:="./config/gpt.vmoptions"}
+MAJA_VER="4.5.4"
+JAVA_VER=22
+
+source ${SCRIPTPATH}/common_functions.sh
+
 : ${SYS_ACC_NAME:="sen2agri-service"}
-: ${SLURM_QOS_LIST:="qosMaccs,qosComposite,qosCropMask,qosCropType,qosPheno,qosLai,qoss4cmdb1,qoss4cl4a,qoss4cl4b,qoss4cl4c,qosfmask,qosvaliditymsk,qostrex"}
 
-
-function get_install_config_property
-{
-    grep "^$1=" "${INSTAL_CONFIG_FILE}" | cut -d'=' -f2 | sed -e 's/\r//g'
-}
 
 function install_sen2agri_services()
 {
-    SERVICES_ARCHIVE=$(get_install_config_property "SERVICES_ARCHIVE")
     if [ -z "$SERVICES_ARCHIVE" ]; then
         if [ -f ../sen2agri-services/sen2agri-services*.zip ]; then
             zipArchive=$(ls -at ../sen2agri-services/sen2agri-services*.zip| head -n 1)
@@ -133,6 +129,13 @@ function install_sen2agri_services()
                     sed -i '/^plugins.use.docker =.*/i site.location=static\r\nvector.tile.service.url = http:\/\/localhost:6767\r\nsite.prefix = \/ui\r\nendpoints.not.authenticated=\/;\/login;\/products\/download;\/users\/pwd\/request;\/users\/pwd\/reset\r\n\r\n' ${TARGET_SERVICES_DIR}/config/services.properties
                 fi
 
+                if ! grep -q "gdal.auxdata.path" ${TARGET_SERVICES_DIR}/config/services.properties
+                then
+                    echo "Updating the gdal auxdata infos ..."
+                    echo -e "\r\n\r\n################################################\r\n##GDAL Tile Cache config\r\n##\r\n##Cache activation\r\ngdal.tile.cache.enabled=true\r\n##Cache location\r\ngdal.tile.cache.dir=.eds/zxy-tiles-cache/\r\n##Size of cache (MB)\r\ngdal.tile.cache.size=1024\r\n##Clear cache at startup\r\ngdal.tile.cache.clear=false\r\ngdal.auxdata.path=/mnt/archive/snap_tmp\r\n\r\n################################################\r\n## Miscellaneous settings\r\nquicklook.extension=.png" >> ${TARGET_SERVICES_DIR}/config/services.properties
+
+                fi                
+                
                 if [ -f ${TARGET_SERVICES_DIR}/config/application.properties ] ; then
                     cp -f ${TARGET_SERVICES_DIR}/config/application.properties ${TARGET_SERVICES_DIR}/config/application.properties.bkp
                 fi
@@ -146,6 +149,11 @@ function install_sen2agri_services()
         fi
         HAS_S2AGRI_SERVICES=true
     fi
+    
+    # Update the start.sh for Arrow IPC on Java 17
+    echo "Updating start.sh for Arrow IPC ..."
+    sed -i 's/java -cp/java --add-opens=java.base\/java.nio=ALL-UNNAMED -cp/g' ${TARGET_SERVICES_DIR}/bin/start.sh
+    
     # it might happen that some files to be packaged with the wrong read rights
     chmod -R a+r ${TARGET_SERVICES_DIR}
     chown -R ${SYS_ACC_NAME}: ${TARGET_SERVICES_DIR}/static/
@@ -161,10 +169,10 @@ function install_sen2agri_services()
 
 function resetDownloadFailedProducts()
 {
-    echo "Resetting failed downloaded products from downloader_history ..."
-    psql -U postgres $DB_NAME -c "update downloader_history set no_of_retries = '0' where status_id = '3' "
-    psql -U postgres $DB_NAME -c "update downloader_history set no_of_retries = '0' where status_id = '4' "
-    psql -U postgres $DB_NAME -c "update downloader_history set status_id = '3' where status_id = '4' "
+    echo "Resetting failed downloaded products from table downloader_history in database $CONFIGURATION_DB_NAME ..."
+    psql -U postgres $CONFIGURATION_DB_NAME -c "update downloader_history set no_of_retries = '0' where status_id = '3' "
+    psql -U postgres $CONFIGURATION_DB_NAME -c "update downloader_history set no_of_retries = '0' where status_id = '4' "
+    psql -U postgres $CONFIGURATION_DB_NAME -c "update downloader_history set status_id = '3' where status_id = '4' "
     echo "Resetting failed downloaded products from downloader_history ... Done!"
 }
 
@@ -187,17 +195,12 @@ function install_docker() {
     if [ $? -ne 0 ]; then
         echo "Installing docker"
         yum -y update epel-release
-        yum -y install docker
-        sed -i "s/'--selinux-enabled /'/" /etc/sysconfig/docker
+        yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+        yum -y install docker-ce docker-ce-cli containerd.io docker-compose gdal jq
         systemctl enable docker
+        systemctl restart docker
     fi
-
-    yum -y install jq docker-compose
-    jq '. + { group: "dockerroot" }' < /etc/docker/daemon.json > /etc/docker/daemon.json.new
-    mv -f /etc/docker/daemon.json.new /etc/docker/daemon.json
-    usermod -aG dockerroot ${SYS_ACC_NAME}
-
-    systemctl restart docker
+    usermod -aG docker ${SYS_ACC_NAME}
 }
 
 function migrate_postgres_to_docker() {
@@ -228,7 +231,7 @@ function migrate_postgres_to_docker() {
     echo "Installing Postgres client libraries and tools"
     yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm
     yum -y update pgdg-redhat-repo
-    yum -y install postgresql15 python-psycopg2 gdal-python
+    yum -y install postgresql16 python-psycopg2 gdal-python
 
     echo "Starting Postgres container"
     cd docker
@@ -258,18 +261,35 @@ function migrate_postgres_to_docker() {
 }
 
 function setup_containers() {
-    docker pull osgeo/gdal:ubuntu-full-3.2.0
-    docker pull sen4x/fmask_extractor:0.1
-    docker pull sen4x/fmask:4.2
+    docker pull osgeo/gdal:ubuntu-full-3.4.1
+    docker pull sen4x/fmask_extractor:0.1.2
+    docker pull sen4x/fmask:4.4-ubuntu-20.04
 
-    docker pull sen4cap/processors:3.0.0
+    # TODO : Remove this when the image is published
+    docker load < docker/images/sen4cap_data_preparation_2_0.tar.gz
+    docker load < docker/images/sen4cap_processors_3.3.0.tar.gz
+    docker pull sen4cap/processors:3.3.0
+
+    docker load < docker/images/sen4cap_processors_scripts_3.3.0.tar.gz
+    docker pull sen4cap/processors-scripts:3.3.0
+
+    docker load < docker/images/sen4x_processors_new_0.1.0.tar.gz
+    docker pull sen4x/processors-new:0.1.0
+
+    docker load < docker/images/sen4x_era5_0.0.1.tar.gz
+    docker pull sen4x/era5-weather:0.0.1
+    docker load < docker/images/sen4stat_processors_1.0.0.tar.gz
+    docker pull sen4stat/processors:1.0.0
     docker pull sen4cap/data-preparation:0.1
+    docker pull sen4cap/data-preparation:0.2
+    docker pull sen4cap/data-preparation:0.3
     docker pull sen4cap/grassland_mowing:3.0.0
-    docker pull sen4x/l2a-processors:0.1
-    docker pull sen4x/sen2cor:2.9.0-ubuntu-20.04
-    docker pull sen4x/maja:3.2.2-centos-7
-    docker pull sen4x/l2a-l8-alignment:0.1
-    docker pull sen4x/l2a-dem:0.1
+    
+    docker pull sen4x/l2a-processors:0.2.3
+    docker pull sen4x/sen2cor:2.10.01-ubuntu-20.04
+    docker pull sen4x/maja:${MAJA_VER}-centos-7
+    docker pull sen4x/l2a-l8-alignment:0.1.2
+    docker pull sen4x/l2a-dem:0.1.3
 
     mkdir -p /var/lib/t-rex
     chown ${SYS_ACC_NAME}: /var/lib/t-rex
@@ -278,7 +298,9 @@ function setup_containers() {
     docker run --rm -u $(id -u $SYS_ACC_NAME):$(id -g $SYS_ACC_NAME) -v /etc/sen2agri/sen2agri.conf:/etc/sen2agri/sen2agri.conf -v /var/lib/t-rex:/var/lib/t-rex sen4cap/data-preparation:0.1 t-rex-genconfig.py /var/lib/t-rex/t-rex.toml
 
     cd docker
-    docker-compose up -d
+    
+    # we don't want to do this when upgrading ...
+    # docker-compose up -d
 
     cd ..
 }
@@ -292,11 +314,11 @@ function migrate_to_docker() {
 # TODO: This function is the same as the one in the installation script. Should be extracted in a common functions file
 function create_and_config_slurm_qos()
 {
-   #extract each configured QOS from SLURM_QOS_LIST
-   IFS=',' read -ra ADDR <<< "${SLURM_QOS_LIST}"
+    #extract each configured QOS from SLURM_QOS_LIST
+    IFS=',' read -ra ADDR <<< "${SLURM_QOS_LIST}"
 
-   #for each qos defined in configuration, add the missing QOS
-   for qosName in "${ADDR[@]}"; do
+    #for each qos defined in configuration, add the missing QOS
+    for qosName in "${ADDR[@]}"; do
         if [ -z $(sacctmgr list qos --parsable | grep -i ${qosName}) ] ; then
             #add qos to slurm
             #set qos number of jobs able to run at any given time
@@ -304,7 +326,7 @@ function create_and_config_slurm_qos()
             sacctmgr -i add qos "${qosName}" set GrpJobs=1
             sacctmgr -i modify user "${SYS_ACC_NAME}" set qos+="${qosName}"
         fi
-   done
+    done
 
    #show current configuration for SLURM
    echo "CLUSTER,USERS,QOS INFO:"
@@ -321,37 +343,106 @@ function create_and_config_slurm_qos()
 }
 
 function update_maja_gipp() {
-    VAL=$(psql -qtAX -U admin ${DB_NAME} -c "select value from config where key = 'processor.l2a.maja.gipp-path' and site_id is null")
+    VAL=$(psql -qtAX -U admin ${CONFIGURATION_DB_NAME} -c "select value from config where key = 'processor.l2a.maja.gipp-path' and site_id is null")
     if [ ! -z $VAL ] ; then
-        if [ -d $VAL ] ; then
-            echo "Key processor.l2a.maja.gipp-path found with value ${VAL}. Copying UserConfiguration into this location ..."
+        src_maja_dir=""
+        if [ -d ../gipp_maja ] ; then
+            src_maja_dir=../gipp_maja/
+            echo "Using as MAJA gipp source the directory ${src_maja_dir} ..."
+            
+        elif [ -d ../gipp_maja_${MAJA_VER} ] ; then 
+            src_maja_dir=../gipp_maja_${MAJA_VER}/
+            echo "Using as MAJA gipp source the directory ${src_maja_dir} ..."
+
+        elif [ -f ../gipp_maja_${MAJA_VER}.zip ] ; then
+            mkdir ../gipp_maja
+            src_maja_dir=../gipp_maja/
+            unzip ../gipp_maja_${MAJA_VER}.zip -d ${src_maja_dir}
+            echo "Using as MAJA gipp source the content of file ../gipp_maja_${MAJA_VER}.zip extacted to directory ${src_maja_dir} ..."
+        else 
+            echo "WARNING: Key processor.l2a.maja.gipp-path found in config table for database ${CONFIGURATION_DB_NAME} with value $VAL but the directory does not exists for this value. UserConfiguration not updated ..."
+        fi
+        if [ ! -z ${src_maja_dir} ] && [ -d ${src_maja_dir} ] ; then
+            # Performing backup only if we have source MAJA gips 
+            if [ -d $VAL ] ; then
+                echo "Key processor.l2a.maja.gipp-path found with value ${VAL}. Performing backup ..."
+                dt=$(date '+%Y%m%d_%H%M%S');
+                mv ${VAL} "${VAL}"_backup_"${dt}"
+            fi
+
+            mkdir -p "${VAL}"
+            echo "Copying GIPP from directory ${src_maja_dir} to destination $VAL ..."
+            cp -fR ${src_maja_dir}/* "${VAL}"
+            
             cp -fR ./config/maja/UserConfiguration ${VAL}
-        else
-            echo "WARNING: Key processor.l2a.maja.gipp-path found in config table for database ${DB_NAME} with value $VAL but the directory does not exists for this value. UserConfiguration not updated ..."
         fi
     else
-        echo "WARNING: Key processor.l2a.maja.gipp-path not found in config table for database ${DB_NAME}. UserConfiguration not updated ..."
+        echo "WARNING: Key processor.l2a.maja.gipp-path not found in config table for database ${CONFIGURATION_DB_NAME}. UserConfiguration not updated ..."
     fi
 }
 
-function install_snap() {
-    # Install and config SNAP
-    # check if docker image already exists
-    # TODO: "docker image inspect sen4cap/snap" might be also used instead images -q
-    if [[ "$(docker images -q sen4cap/snap:8.0 2> /dev/null)" == "" ]]; then
-        TARGET_SNAP_TMP_DIR="/mnt/archive/temp/$(date +%Y%m%d%H%M%S)/"
-        echo "Using directory ${TARGET_SNAP_TMP_DIR} for SNAP image build working dir ..."
-        mkdir -p ${TARGET_SNAP_TMP_DIR} && \
-        cp -fR ./docker/snap8 ${TARGET_SNAP_TMP_DIR} && \
-        wget -P ${TARGET_SNAP_TMP_DIR}/snap8/ http://step.esa.int/downloads/8.0/installers/esa-snap_sentinel_unix_8_0.sh && \
-        chmod +x ${TARGET_SNAP_TMP_DIR}/snap8/esa-snap_sentinel_unix_8_0.sh && \
-        docker build -t sen4cap/snap:8.0 -f ${TARGET_SNAP_TMP_DIR}/snap8/Dockerfile ${TARGET_SNAP_TMP_DIR}/snap8/
-        if [ -d ${TARGET_SNAP_TMP_DIR} ] ; then
-            echo "Removing ${TARGET_SNAP_TMP_DIR} ..."
-            rm -fR ${TARGET_SNAP_TMP_DIR}
+function vercomp () {
+    if [[ $1 == $2 ]]
+    then
+        return 0
+    fi
+    local IFS=.
+    local i ver1=($1) ver2=($2)
+    # fill empty fields in ver1 with zeros
+    for ((i=${#ver1[@]}; i<${#ver2[@]}; i++))
+    do
+        ver1[i]=0
+    done
+    for ((i=0; i<${#ver1[@]}; i++))
+    do
+        if [[ -z ${ver2[i]} ]]
+        then
+            # fill empty fields in ver2 with zeros
+            ver2[i]=0
         fi
+        if ((10#${ver1[i]} > 10#${ver2[i]}))
+        then
+            return 1
+        fi
+        if ((10#${ver1[i]} < 10#${ver2[i]}))
+        then
+            return 2
+        fi
+    done
+    return 0
+}
+
+function install_java()
+{
+    install_java="0"
+    if type -p java; then
+        echo found java executable in PATH
+        _java=java
+    elif [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]];  then
+        echo "Found java executable in $JAVA_HOME"
+        _java="$JAVA_HOME/bin/java"
     else
-        echo "No need to install SNAP container, it already exists ..."
+        echo "No java found."
+        install_java="1"
+    fi
+    
+    if [[ "$_java" ]]; then
+        version=$("$_java" -version 2>&1 | awk -F '"' '/version/ {print $2}')
+        echo "Java version is "$version" "
+        vercomp "${version}" "${JAVA_VER}"
+        if [[ "$?" == "0" || "$?" == "1" ]]; then
+            echo "Java version is more than ${JAVA_VER}. Nothing to do"
+        else
+            echo "Version is less than ${JAVA_VER}."
+            install_java="1"
+        fi
+    fi
+    if [[ "$install_java" == "1" ]] ; then
+        echo "Installing java ${JAVA_VER}"
+        # installing java
+        wget https://download.oracle.com/java/${JAVA_VER}/latest/jdk-${JAVA_VER}_linux-x64_bin.rpm -P /tmp/
+        rpm -ivh /tmp/jdk-${JAVA_VER}_linux-x64_bin.rpm
+        rm -f /tmp/jdk-${JAVA_VER}_linux-x64_bin.rpm
     fi
 }
 
@@ -360,7 +451,10 @@ function copy_additional_scripts() {
     cp -fR ./s4c_l4c_export_all_practices.py /usr/bin
 }
 
-systemctl stop sen2agri-scheduler sen2agri-executor sen2agri-orchestrator sen2agri-http-listener sen2agri-demmaccs sen2agri-demmaccs.timer sen2agri-monitor-agent sen2agri-services
+# Load profile installation configuration
+load_configuration
+
+systemctl stop sen2agri-scheduler sen2agri-executor sen2agri-orchestrator sen2agri-http-listener sen2agri-demmaccs sen2agri-demmaccs.timer sen2agri-monitor-agent sen2agri-services sen2agri-fmask.timer sen2agri-fmask sen2agri-era5-downloader.timer sen2agri-era5-downloader
 
 # TODO: This should be removed when implemented in the services or in processors
 copy_additional_scripts
@@ -370,20 +464,9 @@ migrate_to_docker
 yum -y install python-dateutil libcurl-devel openssl-devel libxml2-devel php-pgsql
 yum -y install ../rpm_binaries/*.rpm
 
-DB_NAME=$(get_install_config_property "DB_NAME")
-if [ -z "$DB_NAME" ]; then
-    DB_NAME="sen2agri"
-fi
-
-echo "$DB_NAME"
-
 TARGET_SERVICES_DIR="/usr/share/sen2agri/sen2agri-services"
-#if [ "$DB_NAME" != "sen2agri" ] ; then
-#    if [ -d "/usr/share/sen2agri/${DB_NAME}-services" ] ; then
-#        TARGET_SERVICES_DIR="/usr/share/sen2agri/${DB_NAME}-services"
-#    fi
-#fi
 
+install_java
 install_sen2agri_services
 
 # Update the QOS list if any new qos was added meanwhile
@@ -391,30 +474,17 @@ create_and_config_slurm_qos
 
 ldconfig
 
-if [ "$DB_NAME" == "sen2agri" ] ; then
-    psql -U postgres -f migrations/migration-1.3-1.3.1.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.3.1-1.4.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.4-1.5.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.5-1.6.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.6-1.6.2.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.6.2-1.7.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.7-1.8.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.8.0-1.8.1.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.8.1-1.8.2.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.8.2-1.8.3.sql $DB_NAME
-    psql -U postgres -f migrations/migration-1.8.3-2.0.sql $DB_NAME
-    psql -U postgres -f migrations/migration-2.0.0-2.0.1.sql $DB_NAME
-    psql -U postgres -f migrations/migration-2.0.1-2.0.2.sql $DB_NAME
-    psql -U postgres -f migrations/migration-2.0.2-2.0.3.sql $DB_NAME
-    psql -U postgres -f migrations/migration-2.0.2-2.0.3-reports.sql $DB_NAME
-else
-    run_migration_scripts "migrations/${DB_NAME}" "${DB_NAME}"
-fi
+# run specific configuration migration scripts
+for profile in ${CONFIGURATION_PROFILES[@]} ; do
+    run_migration_scripts "migrations/${profile}" "${CONFIGURATION_DB_NAME}"
+done
+
+# run common scripts
+# run_migration_scripts "migrations/" "${CONFIGURATION_DB_NAME}"
 
 update_maja_gipp
 
 systemctl daemon-reload
-systemctl restart httpd
 
 mkdir -p /mnt/archive/reference_data
 echo "Copying reference data"
@@ -434,6 +504,12 @@ if [ ! -d /var/log/sen2agri ]; then
     chown ${SYS_ACC_NAME}: /var/log/sen2agri
 fi
 
-systemctl start sen2agri-executor sen2agri-orchestrator sen2agri-http-listener sen2agri-demmaccs sen2agri-demmaccs.timer sen2agri-monitor-agent sen2agri-scheduler sen2agri-services
+# In some previus versions, these were not enabled so make sure they are enabled
+systemctl enable sen2agri-fmask
+systemctl enable sen2agri-fmask.timer
+systemctl enable sen2agri-era5-downloader
+systemctl enable sen2agri-era5-downloader.timer 
+
+systemctl start sen2agri-executor sen2agri-orchestrator sen2agri-http-listener sen2agri-demmaccs sen2agri-demmaccs.timer sen2agri-monitor-agent sen2agri-scheduler sen2agri-services sen2agri-fmask.timer sen2agri-fmask sen2agri-era5-downloader.timer sen2agri-era5-downloader
 
 
